--- a/style.css
+++ b/style.css
@@ -2,4 +2,13 @@
 
 body {
    font-family: Roboto, sans-serif;
-  }
+}
+
+.pokemon {
+    display: inline-block;
+    text-align: center;
+}
+
+.pokemon img {
+    display: block;
+}
